Key:
+ Added Content/Feature.
~ Changed Content/Feature or Bugfix.
- Removed Content/Feature.

~~~~~~~~~~~~0.0.1 Revitalize 12-12-2022 xx.xx P.M~~~~~~~~~~~~~~
~ElectricFurnaces (and their upgrade tiers) now glow when smelting items.
~Reworked some logic regarding the LightManager class to work better, but it might still have issues since that original code was written years ago so there might be cases where I should makde different changes.
    -These changes would be made in CustomObject.cs or CustomItem.cs initializeLightSource, where maybe there should just be one initial light source???
~Fixed some code issues with adding LightSources with the LightManager to some machines.
~Added a more straightforward way to add light sources on CustomObjects
~Added LightSources to BatteryGenerators and CharcoalKilns.
~Fixed a glitch where Charcoal Kilns would work as long as a single piece of wood was provided.
+Added in blueprints for the Burner generator which can either be bought from Clint, or awarded to the player upon reaching floor 50 of the mines.
+Added in blueprints for the Nuclear generator which can either be bought from Clint after unlocking the Walnut Room, or by enabling the hard version of the mines.

~~~~~~~~~~~~0.0.1 Revitalize 12-08-2022 xx.xx P.M~~~~~~~~~~~~~~
~Fixed SDV revitalize tool to generate c# vars as const and not static
+Added in proper graphics for burner generator
+Added in nuclear generators
+Added in smoke effects for when charcoal kilns work
~Changed charcoal kiln sound effects to match the base game.

~~~~~~~~~~~~0.0.1 Revitalize 12-08-2022 xx.xx P.M~~~~~~~~~~~~~~
~Renamed the ItemIds folder to be Ids for future use cases.
    ~This means the SDV Revitalize tool also had some string values update accordingly as well.
+Added in the BurnerGenerator code and a placeholder graphic in the meantime.

~~~~~~~~~~~~0.0.1 Revitalize 11-24-2022 xx.xx P.M~~~~~~~~~~~~~~