@@ -1,0 +1,7 @@
+{
+	"Revitalize.Objects.Misc.StatueOfStatistics":
+	{
+		"displayName":"Statue of Statistics",
+		"description":"Gives you the ability to look up various statistics about yourself!"
+	},
+}
