@@ -1,0 +1,14 @@
+using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+
+namespace Omegasis.Revitalize.Framework.Constants.Ids.Objects
+{
+    public class MiscObjectIds
+    {
+
+        public const string StatueOfStatistics = "Revitalize.Objects.Misc.StatueOfStatistics";
+    }
+}
