@@ -1,0 +1,17 @@
+using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+
+namespace Omegasis.Revitalize.Framework.Constants
+{
+    public class StringConstants
+    {
+
+        /// <summary>
+        /// The new line character for the game. When parsed by the game, a new line is added in.
+        /// </summary>
+        public const string GameUINewLine = "^";
+    }
+}
